# HMM-3D-Catheter-Tip-Tracking

./: .gitignore  LICENSE.txt  README.md  localProjectPath.bat
cpp/: CMakeLists.txt  buildConfig.bat  compile.bat
cpp/common/image/: ImageItk.cpp  ImageItk.h
cpp/common/maths/: Maths.h  Matrix.cpp  Matrix.h  Quaternion.h
cpp/common/medical/: Fluoro3draParams.h  HMM2D3D.cpp  HMM2D3D.h  Object2D3D.cpp  Object2D3D.h  Registration2D3D.cpp  Registration2D3D.h  Roadmapping.cpp  Roadmapping.h  ShapeSimilarity2D3D.cpp  ShapeSimilarity2D3D.h
cpp/common/optimization/: MultiParameterSearch.cpp  MultiParameterSearch.h
cpp/common/registration/: Base2D3DRegistration.cpp  Base2D3DRegistration.h  CallDistanceMetric.h  DefineDistanceMetric.h  MultiParameter2D3DRegistration.cpp  MultiParameter2D3DRegistration.h  Powell2D3DRegistration.cpp  Powell2D3DRegistration.h  ShapeSimilarity.cpp  ShapeSimilarity.h
cpp/common/structure/: PtList.h  Vessels.cpp  Vessels.h  VesselsStateTransitionProbabilities.cpp  VesselsStateTransitionProbabilities.h
cpp/common/util/: File.h  LowLevel.cpp  LowLevel.h  Thread.h  Util.cpp  Util.h  UtilTime.cpp  UtilTime.h
cpp/src/TACE/: ImageTlk.cpp  ImageTlk.h  Registration.cpp  Registration.h  ResampleAndSmoothPtList.cpp  ResampleAndSmoothPtList.h  ResampleAndSmoothVessels.cpp  ResampleAndSmoothVessels.h  TransformPtList.cpp  TransformPtList.h  TransformVessels.cpp  TransformVessels.h  main.cpp
cpp/thirdParties/bigr/: ResampleAndSmoothXMarkerlist.cpp  ResampleAndSmoothXMarkerlist.h  SplineFitter.cpp  SplineFitter.h  readme.txt
cpp/thirdParties/fastDelegate/: FastDelegate.h
cpp/thirdParties/mevislab/: mlLinearAlgebraTools.h
cpp/thirdParties/minizip/: ioapi.c
cpp/thirdParties/numpy/: npy_math.h
data/dataset1/: dataList.txt  dataListFromPreviousFusion.txt
data/dataset1/3dra/: 3dra_0001_3.0_vesselsStructCenterline.txt  3dra_0001_info.txt
data/dataset1/fluoro/: infoFluoroCarmParameters.txt  infoFluoroTransformations.txt
data/dataset1/fluoro/centerlines/: 0000_3.0_catheterCenterline.txt  0001_3.0_catheterCenterline.txt  0002_3.0_catheterCenterline.txt  0003_3.0_catheterCenterline.txt  0004_3.0_catheterCenterline.txt  0005_3.0_catheterCenterline.txt  0006_3.0_catheterCenterline.txt  0007_3.0_catheterCenterline.txt  0008_3.0_catheterCenterline.txt  0009_3.0_catheterCenterline.txt  0010_3.0_catheterCenterline.txt  0011_3.0_catheterCenterline.txt  0012_3.0_catheterCenterline.txt  0013_3.0_catheterCenterline.txt  0014_3.0_catheterCenterline.txt  0015_3.0_catheterCenterline.txt  0016_3.0_catheterCenterline.txt  0017_3.0_catheterCenterline.txt  0018_3.0_catheterCenterline.txt  0019_3.0_catheterCenterline.txt  0020_3.0_catheterCenterline.txt  0021_3.0_catheterCenterline.txt  0022_3.0_catheterCenterline.txt  0023_3.0_catheterCenterline.txt  0024_3.0_catheterCenterline.txt  0025_3.0_catheterCenterline.txt  0026_3.0_catheterCenterline.txt  0027_3.0_catheterCenterline.txt  0028_3.0_catheterCenterline.txt  0029_3.0_catheterCenterline.txt  0030_3.0_catheterCenterline.txt  0031_3.0_catheterCenterline.txt  0032_3.0_catheterCenterline.txt  0033_3.0_catheterCenterline.txt  0034_3.0_catheterCenterline.txt  0035_3.0_catheterCenterline.txt  0036_3.0_catheterCenterline.txt  0037_3.0_catheterCenterline.txt  0038_3.0_catheterCenterline.txt  0039_3.0_catheterCenterline.txt  (+34 more)
data/dataset1/fusion/: 3dra_0001_0000_fusion.txt
examples/HMMBruteforce/: HMMBruteforce.bat  configHMMBruteforce.txt
examples/HMMPowell/: HMMPowell.bat  configHMMPowell.txt
examples/shapeSimilarityBruteforce/: ShapeSimilarityBruteforce.bat  configShapeSimilarityBruteforce.txt
examples/shapeSimilarityPowell/: ShapeSimilarityPowell.bat  configShapeSimilarityPowell.txt
tests/all/: test.bat
userSpecific/: buildConfig.default.bat  globalVariables.default.bat
